Configure jlink with dummy module to avoid automatic module error.